# anticipatory_rl

./: .gitignore  .gitmodules  build_downward_ls6.sh  environ.sty  final_report_antrl.tex  gridworld_domain.pddl  infer_agent.sh  infer_agent_followup.sh  infer_paper1_blockworld.sh  infer_paper1_blockworld_ls6.sh  infer_restaurant.sh  infer_restaurant_ls6.sh  milestone_neurips.aux  milestone_neurips.bbl  milestone_neurips.blg  milestone_neurips.fdb_latexmk  milestone_neurips.fls  milestone_neurips.tex  milestone_refs.bib  pddl_files.txt  project_desc.tex  pyproject.toml  pytest.ini  reproduce_paper1_learned.sh  reproduce_paper1_learned_ls6.sh  reproduce_paper_restaurant_supervised.sh  requirements.txt  run_restaurant_rl.sh  tasks.json  test.py  test_image_env.py  test_paper1_blockworld_dqn.py  test_paper1_blockworld_env.py  test_paper1_blockworld_planner.py  test_ppo.py  train_agent.sh  train_agent_anticipatory.sh  train_agent_anticipatory_followup.sh  train_agent_myopic.sh  train_agent_myopic_followup.sh  (+13 more)
blockworld/: __init__.py  motion.py  planner.py  world.py
docs/: BLOCKWORLD_ENVIRONMENT.md  branch_workflow.md  conditional_branched_q_math.tex  git_blockworld.md  paper2_runbook.md  restaurant_environment_assumptions.md  restaurant_sf_branch.md  restaurant_talukder_alignment.md  successor_features_math.tex  thor_setup.md
miniworld/: __init__.py  entity.py  miniworld.py
paper1_blockworld/: README.md  estimator.py  gnn.py  motion.py  planner.py  reproduce_paper1.py  train_gnn.py  world.py
paper_restaurant/: README.md  __init__.py  candidates.py  planner.py  (+3 more)
(+149 files in other folders)
