[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anticipatory-rl"
version = "0.1.0"
description = "MiniWorld rearrangement experiments with PDDL planning."
authors = [{name = "Raghav"}]
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
